Removal of operationRouter & openapi.yaml extend
